--- a/404.html
+++ b/404.html
@@ -46,6 +46,12 @@
 <li class="nav-item">
   <a class="nav-link" href="https://isglobal-brge.github.io/methylclock/reference/index.html">Reference</a>
 </li>
+<li class="nav-item dropdown">
+  <a href="https://isglobal-brge.github.io/methylclock/#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="dropdown-articles">Articles</a>
+  <div class="dropdown-menu" aria-labelledby="dropdown-articles">
+    <a class="dropdown-item" href="https://isglobal-brge.github.io/methylclock/articles/clocks.html">Clocks summary</a>
+  </div>
+</li>
 <li class="nav-item">
   <a class="nav-link" href="https://isglobal-brge.github.io/methylclock/news/index.html">Changelog</a>
 </li>
