Update methylclock.html --typo
small typo

--- a/vignettes/methylclock.html
+++ b/vignettes/methylclock.html
@@ -849,7 +849,7 @@ library(GEOquery)</code></pre>
 </div>
 <div id="dna-methylation-clocks" class="section level1" number="3">
 <h1><span class="header-section-number">3</span> DNA Methylation clocks</h1>
-<p>The main function to estimate chronological and biological mDNA age is called <code>DNAmAge</code> while the gestational DNAm age is estimated using <code>DNAmGA</code> function. Both functions have similar input arguments. Next subsections detail some of the important issues to be consider before computind DNAm clocks.</p>
+<p>The main function to estimate chronological and biological mDNA age is called <code>DNAmAge</code> while the gestational DNAm age is estimated using <code>DNAmGA</code> function. Both functions have similar input arguments. Next subsections detail some of the important issues to be consider before computing DNAm clocks.</p>
 <div id="data-format" class="section level2" number="3.1">
 <h2><span class="header-section-number">3.1</span> Data format</h2>
 <p>The methylation data is given in the argument <code>x</code>. They can be either beta or M values. The argument <code>toBetas</code> should be set to TRUE when M values are provided. The <code>x</code> object can be:</p>
